--- a/style.css
+++ b/style.css
@@ -1,1 +1,73 @@
+.navbar {
+    margin-bottom: 20px;
+}
+.brandname{
+    color: white;
+}
+.brandname:hover{
+    color: #000000;
+}
 
+.product-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 20px;
+    transition: transform 0.2s;
+}
+
+.product-card:hover {
+    transform: scale(1.05);
+}
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.footer {
+    padding: 10px;
+    margin-top: 50px;
+    background-color: #EE4D2D;
+    color: white;
+}
+
+.navho {
+    background-color: #EE4D2D;
+}
+
+.buttonsss {
+    background-color: #EE4D2D;
+    color: white;
+}
+
+.buttonsss:hover {
+    background-color: #EE4D2D;
+    color: rgb(2, 0, 0);
+}
+
+.hocaco {
+    color: white;
+}
+
+.hocaco:hover {
+    color: #000000;
+}
+
+.modal-title {
+    color: #E85C0D;
+}
+.buttonscheck{
+    background-color: #EE4D2D;
+    color: white;
+}
+.buttonscheck:hover{
+    background-color: #EE4D2D;
+    color: rgb(0, 0, 0);
+}
